--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <p>Welcome to chat app!</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+
+        socket.on('connect', () => {
+            console.log("Connected to server.");
+        });
+
+        socket.on('disconnect', () => {
+            console.log("Server disconnected.");
+        });
+    </script>
 </body>
 </html>
