--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <p>Welcome to chat app!</p>
+
+    <ul id="messages"></ul>
+
+    <form id="message-form">
+        <input type="text" id="message" placeholder="Type your message">
+        <button>Send!</button>
+    </form>
+    <script src="js/libs/jquery-3.2.1.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/index.js"></script>
 </body>
